metadata/force-app/main/default/objects/CustomName_coSCa__c/CustomName_coSCa__c.object-meta.xml
<CustomObject>
    <description>Description_YfhNf</description>
    <label>CustomLabel_VMkAg</label>
    <nameField>
        <label>CustomLabel_VMkAg</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_VMkAgs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>