metadata/force-app/main/default/objects/CustomName_coSCa__c/fields/CustomField_RQcvr__c.field-meta.xml
<CustomField>
    <fullName>CustomField_RQcvr__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldgVQsz</label>
    <length>255</length>
    <type>Text</type>
</CustomField>